compiler/parser/grammar.bnf
<program> ::= <statement_list>
<statement_list> ::= <statement>*
<statement> ::= <variable_declaration> | <assignment> | <if_statement> | <loop_statement> | <function_call> | ";"
<variable_declaration> ::= <type> <identifier> "=" <expression> ";"
<assignment> ::= <identifier> "=" <expression> ";"
<if_statement> ::= "if" "(" <condition> ")" "{" <statement_list> "}" [ "else" "{" <statement_list> "}" ]
<loop_statement> ::= "while" "(" <condition> ")" "{" <statement_list> "}"
<function_call> ::= <identifier> "(" [<argument_list>] ")" ";"
<type> ::= "int" | "float" | "bool" | "string"
<expression> ::= <term> (("+" | "-") <term>)*
<term> ::= <identifier> | <number>
<condition> ::= <expression> <relational_operator> <expression>
<relational_operator> ::= "==" | "!=" | "<" | "<=" | ">" | ">="
